--- a/src/components/DescriptionList/index.less
+++ b/src/components/DescriptionList/index.less
@@ -37,11 +37,12 @@
   .detail {
     line-height: 20px;
     width: 100%;
-    padding-bottom: 20px;
+    margin-bottom: 20px;
     color: @text-color;
     display: table-cell;
     font-weight: 500;
     font-size: 20px;
+    background-color: #ccc
   }
 
   &.small {
