--- a/src/components/DescriptionList/index.less
+++ b/src/components/DescriptionList/index.less
@@ -56,11 +56,17 @@
       margin-bottom: 12px;
       color: @text-color;
     }
-    .term,
+    .term{
+      padding-bottom: 8px;
+      margin-bottom: 0px;
+    }
     .detail {
       padding-bottom: 8px;
+      height: 56px;
+      margin-bottom: 80px;
     }
   }
+
 
   &.large {
     .title {
