--- a/src/components/DescriptionList/index.less
+++ b/src/components/DescriptionList/index.less
@@ -37,11 +37,13 @@
   .detail {
     line-height: 20px;
     width: 100%;  
-    color: @text-color;
+    // color: @text-color;
+    color: #333;
     display: table-cell;
-    font-weight: 500;
-    font-size: 20px;
-    margin-bottom: 16px;
+    font-weight: 400;
+    font-size: 16px;
+    
+   
     
   }
 
@@ -64,9 +66,9 @@
       padding-bottom: 8px;
       height: 56px;
       margin-bottom: 80px;
+      
     }
   }
-
 
   &.large {
     .title {
