--- a/src/common/ListView.tool.less
+++ b/src/common/ListView.tool.less
@@ -1,9 +1,5 @@
-@import '~antd/lib/style/themes/default.less';
-@import '../utils/utils.less';
-
-.card {
-  margin-bottom: 24px;
-}
+@import "~antd/lib/style/themes/default.less";
+@import "../utils/utils.less";
 
 .tableList {
   .tableListOperator {
@@ -51,3 +47,9 @@
     margin-right: 8px;
   }
 }
+
+  
+  
+  
+  
+  
