Add more function to framework

--- a/src/common/Dashboard.tool.less
+++ b/src/common/Dashboard.tool.less
@@ -3,6 +3,34 @@
 @import "../utils/utils.less";
 
 
+
+.functionGroupItem{
+
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 15px;
+
+}
+
+.functionItem{
+
+  margin-top: 5px;
+  margin-bottom: 5px;
+  
+
+}
+
+.functionRow{
+
+  border-left: thick solid #dd6600;
+ 
+  color: @text-color-secondary;
+  &:hover {
+    color: @text-color;
+  }
+
+}
+
 .card {
   margin-bottom: 24px;
 }
