Fix common function issues - One Result to page

--- a/src/common/Dashboard.tool.less
+++ b/src/common/Dashboard.tool.less
@@ -4,6 +4,22 @@
 
 
 
+.crCard{
+
+  text-align: center;
+
+}
+.crCard:hover{
+
+  background-color: #194783;
+  color:#ffff00;
+  font-weight: bolder;
+  
+}
+
+
+
+
 .functionGroupItem{
 
   margin-top: 5px;
