--- a/src/launcher/HomeScreen.less
+++ b/src/launcher/HomeScreen.less
@@ -9,7 +9,7 @@
       width: 30px;
       height: 30px;
       float: left;
-      background: url('../launcher/logo.png') no-repeat center center;
+      background:  no-repeat center center;
       background-size: cover;
       margin: 13px 0 0 15px;
     }
@@ -47,7 +47,7 @@
   .heading {
     text-align: center;
     margin: 0 auto;
-    background: #293c55 url('../launcher/homebackground.jpg') no-repeat center center;
+    background: #293c55  no-repeat center center;
     background-size: cover;
     min-height: 420px;
     padding-top: 100px;
