--- a/src/common/Dashboard.tool.less
+++ b/src/common/Dashboard.tool.less
@@ -71,6 +71,19 @@
   zoom: 1;
  }
 
+ .ant-menu-submenu-title{
+  position: relative;
+  display: block;
+  margin: 0;
+  padding: 0 5px;
+  white-space: nowrap;
+  cursor: pointer;
+
+ }
+
+
+
+
 }
 .rankingList {
   margin-top: 25px;
