--- a/src/common/Dashboard.tool.less
+++ b/src/common/Dashboard.tool.less
@@ -3,6 +3,16 @@
 @import "../utils/utils.less";
 
 
+.itemDesc {
+	
+	padding-top: 10px;
+	margin-bottom: 2px;
+	background-color: white;
+	display: block;
+	position: relative;
+
+
+  }
 
 .crCard{
 
