--- a/src/components/OSSPictureEdit/index.less
+++ b/src/components/OSSPictureEdit/index.less
@@ -23,3 +23,23 @@
     }
   }
 }
+
+.pictureEdit{
+  :global{
+    .ant-upload-list-picture-card .ant-upload-list-item-thumbnail, .ant-upload-list-picture-card .ant-upload-list-item-thumbnail img{
+      
+      width: 80px;
+      height: 80px;
+      object-fit: contain;
+    }
+  }
+}
+
+:global{
+  .ant-upload-list-picture-card .ant-upload-list-item-thumbnail, .ant-upload-list-picture-card .ant-upload-list-item-thumbnail img{
+    
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+  }
+}
