--- a/src/common/Dashboard.tool.less
+++ b/src/common/Dashboard.tool.less
@@ -3,6 +3,13 @@
 @import "../utils/utils.less";
 
 
+
+.pageHeader {
+  background: @component-background;
+  padding: 16px 32px 0 32px;
+ 
+}
+
 .itemDesc {
 	
 	padding-top: 10px;
