--- a/src/components/OSSPictureEdit/index.less
+++ b/src/components/OSSPictureEdit/index.less
@@ -1,4 +1,4 @@
-@import "~antd/lib/style/themes/default.less";
+@import '~antd/lib/style/themes/default.less';
 
 .editableItem {
   line-height: @input-height-base;
@@ -24,10 +24,10 @@
   }
 }
 
-.pictureEdit{
-  :global{
-    .ant-upload-list-picture-card .ant-upload-list-item-thumbnail, .ant-upload-list-picture-card .ant-upload-list-item-thumbnail img{
-      
+.pictureEdit {
+  :global {
+    .ant-upload-list-picture-card .ant-upload-list-item-thumbnail,
+    .ant-upload-list-picture-card .ant-upload-list-item-thumbnail img {
       width: 80px;
       height: 80px;
       object-fit: contain;
@@ -35,9 +35,9 @@
   }
 }
 
-:global{
-  .ant-upload-list-picture-card .ant-upload-list-item-thumbnail, .ant-upload-list-picture-card .ant-upload-list-item-thumbnail img{
-    
+:global {
+  .ant-upload-list-picture-card .ant-upload-list-item-thumbnail,
+  .ant-upload-list-picture-card .ant-upload-list-item-thumbnail img {
     width: 100px;
     height: 100px;
     object-fit: contain;
