--- a/src/common/Dashboard.tool.less
+++ b/src/common/Dashboard.tool.less
@@ -35,8 +35,10 @@
 }
 
 .functionRow {
-  border-left: thick solid #dd6600;
+  //border-left: thick solid #dd6600;
 
+
+  
   color: @text-color-secondary;
   &:hover {
     color: @text-color;
