--- a/src/common/Dashboard.tool.less
+++ b/src/common/Dashboard.tool.less
@@ -16,11 +16,26 @@
 
 .crCard {
   text-align: center;
+  .shortText{
+
+    
+
+  }
+
+
 }
 .crCard:hover {
   background-color: #194783;
   color: #ffff00;
   font-weight: bolder;
+  .icon{
+    display: none;
+  }
+  .shortText{
+
+    display: none;
+
+  }
 }
 
 .functionGroupItem {
